--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -5,4 +5,5 @@ include requirements.txt
 include config.py
 include run.py
 include isoenum_webgui/config_files/*.json
+include isoenum_webgui/templates/*.html
 recursive-include isoenum_webgui *.py
